Type "delete me" instead of resource name for resource deletion (#2453)
* Type delete me instead of resource name for resource deletion

* Type delete me instead of resource name for resource  deletion

* Dialog for delete resource confirmation with dialog wrapper

* Delete resource confirmation UI Test change

* Delete Resource

* Ok button disabled until delete me entered

* Ok button disabled until delete me entered

* Override function OkAction removed

* Override function OkAction removed -

* Validation function properties removed

Co-authored-by: Austin Brooks <abrooksv@users.noreply.github.com>

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -343,9 +343,10 @@ datagrip.secretsmanager.validation.no_username=Secret {0} does not have a field 
 datagrip.secretsmanager.validation.unkown_engine=Unknown database engine {0}
 datagrip.validation.invalid_credential_specified=Invalid credential profile {0} selected!
 datagrip.validation.invalid_region_specified=Invalid region {0} selected!
+delete_resource.confirmation_text=delete me
 delete_resource.delete_failed=Failed to delete {0} ''{1}''
 delete_resource.deleted=Deleted {0} ''{1}''
-delete_resource.message=Are you sure you want to delete {0} ''{1}''?\n\nType the {0} name below to confirm.
+delete_resource.message=Are you sure you want to delete {0} ''{1}''?\n\nType "delete me" below to confirm.
 delete_resource.title=Delete {0} {1}
 dockerfile.label=Dockerfile:
 ecr.copy_image_uri.action=Copy Tag URI
