Use Gradle retry plugin to reduce pipeline flake (#2472)
- Since we have 16 builds in the pipeline even with pretty stable tests, it's pretty easy to have a failure. We also observe this in PR builds, so:
- Use the Gradle retry plugin to retry twice on test failure
- Our test flake monitoring still works since it still outputs to the log that the test fails

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -426,6 +426,7 @@ general.configure_button=Configure
 general.create_button=Create
 general.create_in_progress=Creating...
 general.delete=Delete
+general.delete_accessible_name=Delete confirmation box
 general.execution.canceled=canceled
 general.execution.cli_error=Command did not exist successfully, exit code: {0}\n
 general.execution.failed=failed
