Improve CloudFormation template validation for deployment (#2491)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -778,7 +778,13 @@ serverless.application.deploy.validation.s3.bucket.empty=Select an S3 Bucket
 serverless.application.deploy.validation.s3.bucket.loading=Still loading the list of S3 buckets...
 serverless.application.deploy.validation.stack.loading=Still loading CloudFormation stacks...
 serverless.application.deploy.validation.stack.missing=Specify a Stack to deploy to
-serverless.application.deploy.validation.template.values.missing=Template values are missing: {0}
+serverless.application.deploy.validation.template.values.badRegex=AllowedPattern for {0} is not valid: {1}
+serverless.application.deploy.validation.template.values.failsRegex=Template value for {0} does not match AllowedPattern defined in template: {1}
+serverless.application.deploy.validation.template.values.notANumber=Template value for {0} is not a number: {1}
+serverless.application.deploy.validation.template.values.tooBig=Template value for {0} is larger than MaxValue defined in template: {1}
+serverless.application.deploy.validation.template.values.tooLong=Template value for {0} exceeds MaxLength defined in template: {1}
+serverless.application.deploy.validation.template.values.tooShort=Template value for {0} does not meet MinLength defined in template: {1}
+serverless.application.deploy.validation.template.values.tooSmall=Template value for {0} is smaller than MinValue defined in template: {1}
 serverless.application.deploy_in_progress.title=Deploying Application {0}
 settings.credentials=Credentials
 settings.credentials.none_selected=No credentials selected
