--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -640,6 +640,7 @@ s3.new.folder.name=Folder name:
 s3.open.file_too_big=The editor cannot open files larger than {0}
 s3.open.viewer.bucket.action=View Bucket
 s3.open.viewer.bucket.failed=Failed to open bucket
+s3.open.viewer.bucket_does_not_exist=Bucket {0} does not exist.
 s3.open.viewer.failed=Failed to open file in editor.
 s3.open.viewer.failed.unsupported=Failed to open file in editor. Unsupported file type.
 s3.rename.object.action=Rename...
