Move attaching the debugger to a step (#2520)
- Move attach debugger from a weird async thing to a step in and of itself
- This allows moving the two dotnet container commands to steps as well
- It is made up of 2 steps, a parent and an attach that is reused between runtimes. Parent hides automatically when number of children == 1
- Centralize some of the files, having 3 different files for a 20 line connect function + image + zip based debugging, it made it harder to find things

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -657,6 +657,9 @@ sam.build.failed=SAM build command failed
 sam.build.running=Running SAM build
 sam.build.succeeded=SAM build command succeeded
 sam.build.title=SAM build
+sam.debug.attach=Attach Debugger
+sam.debug.dotnet_find_pid=Find DotNet process PID
+sam.debug.find_container=Find Container
 sam.executable.minimum_too_low_runtime=The runtime {0} requires a minimum SAM CLI version of {1}
 sam.init.description=AWS Serverless Application Model (AWS SAM) prescribes rules for expressing Serverless applications on AWS.
 sam.init.error.no.project.basepath=Unable to determine project basepath
