Add support for viewing a prefixed subset of an S3 bucket (#2581)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -631,6 +631,8 @@ s3.open.viewer.bucket.failed=Failed to open bucket
 s3.open.viewer.bucket_does_not_exist=Bucket {0} does not exist.
 s3.open.viewer.failed=Failed to open file in editor.
 s3.open.viewer.failed.unsupported=Failed to open file in editor. Unsupported file type.
+s3.prefix.filter=Filter by prefix
+s3.prefix.label=Prefix: {0}
 s3.rename.object.action=Rename...
 s3.rename.object.failed=Failed to rename object
 s3.rename.object.title=Rename: ''{0}'' to
