Start a DynamoDB table viewer (#2600)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1,5 +1,6 @@
 # Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 # SPDX-License-Identifier: Apache-2.0
+action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.ecr.repository.push.text=Push to Repository...
 aws.description=Amazon Web Services (AWS) is a secure cloud services platform, offering compute power, database storage, content delivery and other functionality to help businesses scale and grow.
 aws.notification.credentials_missing=Error: AWS credentials not configured
@@ -337,6 +338,13 @@ delete_resource.deleted=Deleted {0} ''{1}''
 delete_resource.message=Are you sure you want to delete {0} ''{1}''?\n\nType "delete me" below to confirm.
 delete_resource.title=Delete {0} {1}
 dockerfile.label=Dockerfile:
+dynamodb.viewer.open.failed=Failed to open DynamoDB table
+dynamodb.viewer.open.failed.with_error=Failed to open DynamoDB table: {0}
+dynamodb.viewer.search.index.global=Global
+dynamodb.viewer.search.index.label=Table / Index:
+dynamodb.viewer.search.index.local=Local
+dynamodb.viewer.search.run.title=Run
+dynamodb.viewer.search.title=Scan
 ecr.copy_image_uri.action=Copy Tag URI
 ecr.copy_uri.action=Copy Repository URI
 ecr.create.repo.action=Create Repository...
@@ -398,6 +406,7 @@ explorer.error_loading_resources_not_connected=check credentials/region
 explorer.label=AWS Explorer
 explorer.node.cloudformation=CloudFormation
 explorer.node.cloudwatch=CloudWatch Logs
+explorer.node.dynamo=DynamoDB
 explorer.node.ecr=ECR
 explorer.node.ecs=ECS
 explorer.node.lambda=Lambda
@@ -453,6 +462,7 @@ general.time.one_minute=One Minute
 general.time.ten_minutes=Ten Minutes
 general.unknown_error=Unknown error
 general.update_button=Update
+group.aws.toolkit.dynamoViewer.toolbar.settings.text=Settings
 group.aws.toolkit.s3viewer.contextMenu.copyGroup.text=Copy
 iam.create.role.in_progress=Creating...
 iam.create.role.missing.role.name=Role name is required.
