--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1,7 +1,7 @@
 # Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 # SPDX-License-Identifier: Apache-2.0
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
-action.ecr.repository.push.text=Push to Repository...
+action.aws.toolkit.ecr.repository.push.text=Push to Repository...
 apprunner.action.configure=Configure Service
 apprunner.action.copyServiceUrl=Copy Service URL
 apprunner.action.create.service=Create Service...
