--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -2,6 +2,8 @@
 # SPDX-License-Identifier: Apache-2.0
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
+action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
+action.aws.toolkit.s3.open.bucket.viewer.text=View Bucket
 apprunner.action.configure=Configure Service
 apprunner.action.copyServiceUrl=Copy Service URL
 apprunner.action.create.service=Create Service...
@@ -734,11 +736,12 @@ s3.name=Name
 s3.new.folder=New Folder...
 s3.new.folder.name=Folder name:
 s3.open.file_too_big=The editor cannot open files larger than {0}
-s3.open.viewer.bucket.action=View Bucket
 s3.open.viewer.bucket.failed=Failed to open bucket
 s3.open.viewer.bucket_does_not_exist=Bucket {0} does not exist.
 s3.open.viewer.failed=Failed to open file in editor.
 s3.open.viewer.failed.unsupported=Failed to open file in editor. Unsupported file type.
+s3.open.viewer.prefix.message=Specify S3 Key prefix:
+s3.open.viewer.prefix.title=Enter Key Prefix
 s3.prefix.filter=Filter by prefix
 s3.prefix.label=Prefix: {0}
 s3.rename.object.action=Rename...
