Add notification to config/credential files pointing to help page (#2620)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -354,6 +354,7 @@ configure.toolkit.upsert_credentials.confirm_file_create.okay=Create
 configure.toolkit.upsert_credentials.confirm_file_create.title=Create Credential File
 configure.validate.no_region_specified=Must specify a region.
 credentials.could_not_open=Could not open credential file {0} for editing
+credentials.file.notification=AWS Toolkit profiles will be reloaded on save
 credentials.invalid.description=Failed to validate your AWS credentials
 credentials.invalid.more_info=More info...
 credentials.invalid.title=Invalid AWS Connection
@@ -522,9 +523,12 @@ general.execution.failed=failed
 general.execution.running=running...
 general.execution.success=completed successfully
 general.file_not_found=File not found: "{0}"
+general.help=Help
 general.in_progress_button=In progress
 general.message=Message
 general.name.label=Name:
+general.notification.action.hide_forever=Don't show again
+general.notification.action.hide_once=Dismiss
 general.policy=Policy
 general.refresh=Refresh
 general.select_button=Select
@@ -679,7 +683,6 @@ lambda.workflow.update_code.wait_for_stable=Waiting for function to stabilize
 loading_resource.failed=Failed loading resources
 loading_resource.loading=Loading...
 notice.message.jetbrains.minimum.version=Support for version {0} of {1} is being deprecated - the next release will require version {2} or later.
-notice.suppress=Don't show this again
 notice.title.jetbrains.minimum.version=AWS Toolkit Deprecation Notice
 rds.aurora=Aurora
 rds.iam_config=Connect with IAM...
