Add hidden action to view the recorded telemetry (#2633)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
+action.aws.toolkit.open.telemetry.viewer.text=View Telemetry
 action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
 action.aws.toolkit.s3.open.bucket.viewer.text=View Bucket
 apprunner.action.configure=Configure Service
