--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -422,6 +422,7 @@ dynamodb.viewer.search.run.title=Run
 dynamodb.viewer.search.title=Scan
 ecr.copy_image_uri.action=Copy Tag URI
 ecr.copy_uri.action=Copy Repository URI
+ecr.create.app_runner_service.action=Create App Runner Service...
 ecr.create.repo.action=Create Repository...
 ecr.create.repo.title=Create ECR Repository
 ecr.create.repo.validation.empty=Enter a name
