Adding ability to open App Runner URL in an external browser (#2626)
* Adding ability to open App Runner URL in an external browser

* Review feedback

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1,12 +1,13 @@
 # Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 # SPDX-License-Identifier: Apache-2.0
+action.apprunner.service.copyServiceUri=Open Service URL
+action.apprunner.service.openServiceUri.text=Copy Service URL
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
 action.aws.toolkit.open.telemetry.viewer.text=View Telemetry
 action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
 action.aws.toolkit.s3.open.bucket.viewer.text=View Bucket
 apprunner.action.configure=Configure Service
-apprunner.action.copyServiceUrl=Copy Service URL
 apprunner.action.create.service=Create Service...
 apprunner.action.delete.service=Delete Service...
 apprunner.action.deploy=Deploy
