Fix apprunner action localized text (#2636)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1,7 +1,7 @@
 # Copyright 2020 Amazon.com, Inc. or its affiliates. All Rights Reserved.
 # SPDX-License-Identifier: Apache-2.0
-action.apprunner.service.copyServiceUri=Open Service URL
-action.apprunner.service.openServiceUri.text=Copy Service URL
+action.apprunner.service.copyServiceUri.text=Copy Service URL
+action.apprunner.service.openServiceUri.text=Open Service URL
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
 action.aws.toolkit.open.telemetry.viewer.text=View Telemetry
