Add 'Open' action for dynamic resource models (#301)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -7,6 +7,7 @@ action.aws.toolkit.ecr.repository.push.text=Push to Repository...
 action.aws.toolkit.open.telemetry.viewer.text=View Telemetry
 action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
 action.aws.toolkit.s3.open.bucket.viewer.text=View Bucket
+action.dynamic.open.text=Open Resource...
 apprunner.action.configure=Configure Service
 apprunner.action.create.service=Create Service...
 apprunner.action.delete.service=Delete Service...
