Add error message on server exception when getting resource model (#302)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -418,8 +418,10 @@ delete_resource.deleted=Deleted {0} ''{1}''
 delete_resource.message=Are you sure you want to delete {0} ''{1}''?\n\nType "delete me" below to confirm.
 delete_resource.title=Delete {0} {1}
 dockerfile.label=Dockerfile:
+dynamic_resources.fetch.fail.content=Failed to retrieve resource model for {0}
+dynamic_resources.fetch.fail.title=Open resource model
 dynamic_resources.fetch.fetch=Retrieving model
-dynamic_resources.fetch.indicator_title=Open resource model for '{0}'
+dynamic_resources.fetch.indicator_title=Open resource model for {0}
 dynamic_resources.fetch.open=Opening model in IDE
 dynamodb.viewer.open.failed=Failed to open DynamoDB table
 dynamodb.viewer.open.failed.with_error=Failed to open DynamoDB table: {0}
