Add new CredentialIdentifier selector with UI DSL support (#2668)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -362,7 +362,9 @@ configure.validate.no_region_specified=Must specify a region.
 credentials.could_not_open=Could not open credential file {0} for editing
 credentials.file.notification=AWS Toolkit profiles will be reloaded on save
 credentials.invalid.description=Failed to validate your AWS credentials
+credentials.invalid.invalid_selection=Please select a valid credential profile
 credentials.invalid.more_info=More info...
+credentials.invalid.not_found=''{0}'' (not found)
 credentials.invalid.title=Invalid AWS Connection
 credentials.mfa.action=Enter MFA code
 credentials.mfa.display=''{0}'' requires MFA to connect
