Add delete dynamodb table action (#2673)
* Commonalize some logic with S3 delete test too

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -3,6 +3,7 @@
 action.apprunner.service.copyServiceUri.text=Copy Service URL
 action.apprunner.service.openServiceUri.text=Open Service URL
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
+action.aws.toolkit.dynamodb.delete_table.text=Delete Table...
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
 action.aws.toolkit.open.telemetry.viewer.text=View Telemetry
 action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
