--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -83,6 +83,7 @@ aws.notification.credentials_missing=Error: AWS credentials not configured
 aws.notification.sam_cli_not_valid=Error: {0}. Click <a href="">here</a> to reconfigure AWS SAM.
 aws.notification.title=AWS Toolkit
 aws.settings.auto_detect=Auto-detected: {0}
+aws.settings.aws_cli_settings=AWS CLI Settings
 aws.settings.clouddebug.location=cloud-debug CLI executable:
 aws.settings.executables.auto_resolved=(Auto-resolved: {0})
 aws.settings.executables.cannot_determine_version=Cannot determine version of {0}: {1}
@@ -462,6 +463,36 @@ ecr.repo.not_selected=ECR Repository must be selected
 ecr.tag.invalid=Tag provided is not valid
 ecs.clusters=Clusters
 ecs.container_actions_group.label=Containers
+ecs.execute_command.label=Command:
+ecs.execute_command.production_warning.checkbox_label=I confirm {0} is not a production service and wish to continue
+ecs.execute_command_disable=Disable Command Execution
+ecs.execute_command_disable_failed=Execute Command could not be disabled for {0}
+ecs.execute_command_disable_in_progress=Cannot execute action since Execute Command is being disabled for {0}
+ecs.execute_command_disable_progress_indicator_message=Disabling Command Execution for {0}
+ecs.execute_command_disable_success=Execute Command for {0} has been disabled.
+ecs.execute_command_disable_warning=Disabling command execution will change the state of resources in your AWS account, including but not limited to stopping and restarting the service.\n Do you wish to continue?
+ecs.execute_command_disable_warning_title=Disable Execute Command Warning
+ecs.execute_command_enable=Enable Command Execution
+ecs.execute_command_enable_failed=Execute Command could not be enabled for {0}
+ecs.execute_command_enable_in_progress=Cannot execute action since Execute Command is being enabled for {0}
+ecs.execute_command_enable_progress_indicator_message=Enabling Command Execution for {0}
+ecs.execute_command_enable_success=Execute Command for {0} has been enabled.
+ecs.execute_command_enable_warning=Enabling command execution will change the state of resources in your AWS account, including but not limited to stopping and restarting the service.\nAltering the state of resources while the Execute Command is enabled can lead to unpredictable results.\n Do you wish to continue?
+ecs.execute_command_enable_warning_title=Enable Execute Command Warning
+ecs.execute_command_no_command=Command to execute must be entered
+ecs.execute_command_no_task_role_found_exception=No roles found
+ecs.execute_command_parameters=ecs execute-command --cluster {0} --task {1} --command {2} --interactive --container {3}
+ecs.execute_command_permissions_not_verified=Permissions for ECS Exec could not be verified. Please ensure you have the right role and permissions before proceeding
+ecs.execute_command_permissions_required_title=Permissions required for ECS Exec
+ecs.execute_command_run=Run Command...
+ecs.execute_command_run_command_default_text=Enter command...
+ecs.execute_command_run_command_in_shell=Open Interactive Shell...
+ecs.execute_command_shell.label=Shell:
+ecs.execute_command_shell_comboBox_empty=Shell must be selected
+ecs.execute_command_task.label=Task:
+ecs.execute_command_task_comboBox_empty=Task must be selected
+ecs.execute_command_task_role_invalid_warning=<html>You may not have the <a href= "https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-exec.html#ecs-exec-enabling-and-using">Permissions Required for using the execute command</a><br/>Please set up a Task Role with the required permissions and retry...</html>
+ecs.execute_command_task_role_invalid_warning_title=Set up Valid Task Role with Permissions
 ecs.no_services_in_cluster=Cluster has no services
 ecs.service.container_logs.action_label=View Logs
 ecs.service.logs.cannot_determine_log_stream=Cannot determine log streams for service {0}. Note: only AWSLOGS LogDriver is supported.
@@ -478,6 +509,7 @@ executableCommon.empty_info={0} did not provide any output
 executableCommon.missing_executable={0} executable is not found
 executableCommon.unexpected_output={0} provided unexpected output. Ensure that your {0} is up-to-date: "{1}"
 executableCommon.version_parse_error=Could not parse {0} executable version from "{1}"
+executableCommon.version_range_wrong=Bad {0} executable version. Expected version must be within the following ranges: {1} , but was {2}
 executableCommon.version_too_high=Upgrade your AWS Toolkit plugin to resolve this issue.
 executableCommon.version_too_low=Upgrade your {0} to resolve this issue.
 executableCommon.version_wrong=Bad {0} executable version. Expected {1} ≤ version < {2} but was {3}.
@@ -523,10 +555,12 @@ feedback.validation.empty_comment=Please provide a comment.
 feedback.validation.no_sentiment=Please select how you're feeling.
 general.close_button=Close
 general.configure_button=Configure
+general.confirm_proceed=Please confirm before proceeding
 general.create_button=Create
 general.create_in_progress=Creating...
 general.delete=Delete
 general.delete_accessible_name=Delete confirmation box
+general.execute_button=Execute
 general.execution.canceled=canceled
 general.execution.cli_error=Command did not exist successfully, exit code: {0}\n
 general.execution.failed=failed
@@ -911,6 +945,8 @@ serverless.application.deploy.validation.template.values.tooLong=Template value 
 serverless.application.deploy.validation.template.values.tooShort=Template value for {0} does not meet MinLength defined in template: {1}
 serverless.application.deploy.validation.template.values.tooSmall=Template value for {0} is smaller than MinValue defined in template: {1}
 serverless.application.deploy_in_progress.title=Deploying Application {0}
+session_manager_plugin_installation_warning=<html>ECS Exec makes use of AWS Systems Manager (SSM) Session Manager to establish a connection with the running container. <br/>Please <a href = "https://docs.aws.amazon.com/systems-manager/latest/userguide/session-manager-working-with-install-plugin.html">Install the Session Manager Plugin</a> before proceeding!</html>
+session_manager_plugin_installation_warning_title=Install Session Manager Plugin
 settings.credentials=Credentials
 settings.credentials.none_selected=No credentials selected
 settings.credentials.profile_sub_menu=All Credentials
