Add support for pulling images from ECR (#2684)

--- a/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -4,6 +4,7 @@ action.apprunner.service.copyServiceUri.text=Copy Service URL
 action.apprunner.service.openServiceUri.text=Open Service URL
 action.aws.toolkit.dynamoViewer.changeMaxResults.text=Max Results
 action.aws.toolkit.dynamodb.delete_table.text=Delete Table...
+action.aws.toolkit.ecr.repository.pull.text=Pull from Repository...
 action.aws.toolkit.ecr.repository.push.text=Push to Repository...
 action.aws.toolkit.open.telemetry.viewer.text=View Telemetry
 action.aws.toolkit.s3.open.bucket.viewer.prefixed.text=View Bucket with Prefix...
@@ -447,7 +448,10 @@ ecr.dockerfile.configuration.invalid=Invalid Dockerfile run configuration select
 ecr.dockerfile.configuration.invalid_server=Dockerfile run configuration has an invalid server connection
 ecr.dockerfile.configuration.label=Dockerfile configuration:
 ecr.dockerfile.label=Dockerfile:
-ecr.image.not_selected=Local image must be selected
+ecr.image.not_selected=Image must be selected
+ecr.pull.confirm=Pull
+ecr.pull.progress=Pulling image from ECR: {0}:{1}
+ecr.pull.title=Pull from ECR
 ecr.push.confirm=Push
 ecr.push.credential_fetch_failed=Failed to obtain authorization token from ECR
 ecr.push.failed=Push failed: {0}
@@ -726,6 +730,7 @@ lambda.workflow.update_code.name=Update Lambda code
 lambda.workflow.update_code.wait_for_stable=Waiting for function to stabilize
 loading_resource.failed=Failed loading resources
 loading_resource.loading=Loading...
+loading_resource.still_loading=Resources are still loading
 notice.message.jetbrains.minimum.version=Support for version {0} of {1} is being deprecated - the next release will require version {2} or later.
 notice.title.jetbrains.minimum.version=AWS Toolkit Deprecation Notice
 rds.aurora=Aurora
